prevent long words from causing horizontal scroll on mobile

--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -10,6 +10,7 @@ body {
     margin: 0;
     padding: 0;
     color: $off-black;
+    word-break: break-all;
 }
 
 ul {
